fix(ddd): 一些ddd相关的信息

--- a/谈谈前端圈复杂度原理和实践.md
+++ b/谈谈前端圈复杂度原理和实践.md
@@ -74,7 +74,7 @@ function complexityFun (paramA, paramB) {
 
 - 一个圈复杂度高的模块（函数），由上文中描述的计算方法来看，必然会有更多的运行分支，要对这样的模块进行如单元测试用例的编写，将会十分复杂，并且后期用例维护也是一个问题。
 
-- 我们总是期望代码是高内聚，低耦合的。一个圈复杂度高的模块就意味着有许多的判定节点，那就意味着这个模块多半没有达到单一职责，也意味着内聚教低.
+- 我们总是期望代码是高内聚，低耦合的。一个圈复杂度高的模块就意味着有许多的判定节点，那就意味着这个模块多半没有达到单一职责，也意味着内聚较低.
 
 - 代码可读性是大型项目与团队协作间必须要考虑的一个因素。圈复杂度高的模块（函数），随着逻辑复杂度的增加，代码可读性不可避免的也将降低，不利于成员间相互协作与后期维护，造成不想改，不敢改的局面。
 
